Mudança na apresentação

--- a/css/theme/vagas.css
+++ b/css/theme/vagas.css
@@ -35,7 +35,7 @@ body {
 .reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 {
   margin: 0 0 20px 0;
   color: #1073c0;
-  font-family: 'Titilium Web', Impact, sans-serif;
+  font-family: 'Titillium Web', Impact, sans-serif;
   font-weight: normal;
   line-height: 1.2;
   letter-spacing: normal;
